--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <meta name="twitter:title" content="Brewchart">
     <meta name="twitter:description" content="Tools for homebrewing">
     <meta name="twitter:image" content="./src/assets/og-image.jpg">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Orelega+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
